--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -35,3 +35,56 @@
 .sidebar-link:hover {
     background-color: rgba(255, 255, 255, 0.1);
 }
+
+.Album{
+    position: absolute;
+    right: 0px;
+    width: 400px;
+    font-weight: 600;
+    top:0;
+}
+
+.dropzone {
+    width: 100%;
+    height: 200px;
+    padding: 30px;
+    border: 2px dashed gray;
+    text-align: center;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+  }
+  .dropzone.dragover {
+    background: #eef;
+  }
+  .preview{
+      height: 400px;
+      overflow-y: scroll;
+      overflow-x: hidden;
+      margin-top: 10px;
+      
+  }
+  .preview img {
+    width: 100%;
+    margin: 5px;
+    object-fit: cover;
+  }
+
+.list-img{
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+    height: 400px;
+   
+}
+
+.list-img-item{
+    width: 100%;
+    background-color: var(--greylightnhe);
+}
+
+.success{
+    
+}
