--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -31,7 +31,7 @@ button{
   transition: 0.5s;
 }
 
-.status-delivered {
+.status-delivered, .status-Active {
   background-color: #e6f8f0;
   color: #0abb87;
 }
@@ -46,7 +46,7 @@ button{
   color: #ffa800;
 }
 
-.status-cancelled {
+.status-canceled, .status-Blocked {
   background-color: #ffe2e5;
   color: #f64e60;
 }
@@ -130,4 +130,16 @@ button{
       position: relative;
       margin-top:50px;
     }
+  }
+
+  .dropdown-content{
+    display:none;
+  }
+
+  .dropdown:hover ~ .dropdown-content{
+    display:block;
+  }
+
+  .dropdown-content:hover{
+    display:block;
   }
