--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -2,6 +2,14 @@ button{
   cursor:pointer;
 }
 
+.container{
+  animation: zoomIn 0.5s;
+}
+
+.contact{
+  animation:slideInRight 0.5s;
+}
+
 ::-webkit-scrollbar {
   width: 3px; /* Chiều rộng của thanh cuộn dọc */
   height: 8px; /* Chiều cao của thanh cuộn ngang */
@@ -66,13 +74,15 @@ button{
   width: 45%;
   font-weight: 600;
   top: 0;
+  
 }
 
 .dropzone {
   width: 100%;
   height: 200px;
   padding: 30px;
-  border: 2px dashed gray;
+  border: 0.5px dashed gray;
+  border-radius:2px;
   text-align: center;
   cursor: pointer;
   display: flex;
@@ -84,12 +94,15 @@ button{
 }
 .preview {
   height: 400px;
-  overflow-y: scroll;
-  overflow-x: hidden;
+  display:grid;
+  grid-template-columns:repeat(4,1fr);
+  grid-template-rows:repeat(4,1fr);
   margin-top: 10px;
+  gap:5px;
 }
 .preview img {
   width: 100%;
+  height:100%;
   margin: 5px;
   object-fit: cover;
 }
@@ -107,6 +120,11 @@ button{
 }
 
 .success {
+  #a7c957;
+}
+
+.warning{
+  
 }
 
 @media print {
@@ -143,3 +161,36 @@ button{
   .dropdown-content:hover{
     display:block;
   }
+
+  .loader {
+  width: 20px;
+  height: 20px;
+  border: 3px solid #FFF;
+  border-radius: 50%;
+  display: inline-block;
+  position: relative;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+.loader::after {
+    content: '';  
+  box-sizing: border-box;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    border: 3px solid transparent;
+    border-bottom-color: #000;
+}
+    
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+} 
