--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4026,19 +4026,19 @@ h3{
     margin-bottom: 12px;
   }
   .user { text-align: right; }
-  .user span {
+  .user div {
     background: var(--black); 
     padding: 8px 12px;
     display: inline-block; 
     border-radius: 15px;
     color: var(--white);
   }
-  .ai span {
-    background: var(--black); 
+  .ai div {
+    background: var(--greylightnhe); 
     padding: 8px 12px;
     display: inline-block; 
     border-radius: 15px;
-    color: var(--white);
+    color: var(--black);
   }
   #input-area {
     display: flex; padding: 10px;
