--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4032,6 +4032,7 @@ h3{
     display: inline-block; 
     border-radius: 15px;
     color: var(--white);
+    animation: fadeInUp 0.5s;
   }
   .ai div {
     background: var(--greylightnhe); 
@@ -4039,6 +4040,7 @@ h3{
     display: inline-block; 
     border-radius: 15px;
     color: var(--black);
+    animation: fadeInUp 0.5s;
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
   }
   #input-area {
